[package]
name = "strong-xml"
version = "0.6.4"
repository = "https://github.com/PoiScript/strong-xml"
description = "Strong typed xml, based on xmlparser."
license = "MIT"
readme = "README.md"
authors = ["PoiScript <poiscript@gmail.com>"]
keywords = ["xml", "xmlparser", "derive", "proc-macro"]
edition = "2018"

[dependencies]
lazy_static = {version="1.4",default-features = false, features = ["spin_no_std"]}
log = { version = "0.4", optional = true }
memchr = {version = "2.4", default-features=false}
strong-xml-derive = { version = "0.6.3", path = "../strong-xml-derive" }
xmlparser = {version = "0.13", default-features = false }

[dev-dependencies]
env_logger = "0.8"
